@@ -408,6 +408,16 @@ Lists all the rooms which have directions for which an exit has been defined, \
 but does not link to any room. Adding the log parameter will dump all that stuff \
 to your mud.log
 
+LIST_GENSTATS=\
+Command  : LIST\n\r\
+Usage    : LIST GENSTATS ([CLASS]/[ID]/[ITEM/MOB/WHATEVER NAME])\n\r\
+Example  : list genstats GenWeapon\n\r\
+Example  : list genstats orc\n\r\
+Example  : list genstats GenItem\n\r\
+Example  : list genstats door\n\r\
+Shows the Generic Item stat names for the given class or item.  These \
+names are used in scripting, in random area xml, and the gmodify command.
+
 LIST_ITEMS=\
 Command  : LIST\n\r\
 Usage    : LIST ITEMS\n\r\
